crates/ink/tests/ui/storage_item/fail/argument_derive_missing_arg.stderr
error: expected a bool literal value for `derive` ink! storage item configuration argument
 --> tests/ui/storage_item/fail/argument_derive_missing_arg.rs:1:21
  |
1 | #[ink::storage_item(derive)]
  |                     ^^^^^^
